LEI2DI04-4 #close#comment Data Base implementation